src/objects/Security_Alert__c.object
<CustomObject>
    <fields>
        <fullName>AlertImageURL__c</fullName>
        <inlineHelpText>This URL field holds the link to an image that should be displayed on the home page of the Trust Jedi application.</inlineHelpText>
        <label>AlertImageURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Image__c</fullName>
        <formula>IMAGE(AlertImageURL__c, Subject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Start__c</fullName>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <formula>AND(
  TODAY() &lt;= Date_End__c,
  TODAY() &gt;= Date_Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_Link__c</fullName>
        <label>Documentation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF( 
ISPICKVAL(Type__c, &apos;Alert&apos;),IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;Red&apos;,30,30), 
IF(ISPICKVAL(Type__c, &apos;Warning&apos;), IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Yellow&apos;,30,30),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_ID__c</fullName>
        <label>Incident ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Subject__c</fullName>
        <label>Short Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowAlertImage__c</fullName>
        <formula>!ISBLANK(AlertImageURL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowAlertImage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trust_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trust Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>showContact__c</fullName>
        <formula>LEN(Trust_Contact__c)&lt;&gt;0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>showContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showLink__c</fullName>
        <formula>NOT(ISBLANK(Documentation_Link__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>showLink</label>
        <type>Checkbox</type>
    </fields>
    <label>Security Alert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Security Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>